--- a/html-css-02-basico/0203-estrutura/produtos/bicicletas.html
+++ b/html-css-02-basico/0203-estrutura/produtos/bicicletas.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carros e Bicicletas</title>
+    <title>Bicicletas</title>
 </head>
 <body>
-    <h1>Carros e Bicicletas</h1>
+    <h1>Bicicletas</h1>
     <p>Teste</p>
-    <p><a href="produtos/carros.html">Carros</a></p>
-    <p><a href="produtos/bicicletas.html">Bicicletas</a></p>
+    <p><a href="../index.html">Início</a></p>
 </body>
 </html>
